Edit html and css

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                 </div>
                 <div class="column right">
                     <div class="text">Jestem MVRE i jestem <span>Designerem</span></div>
-                    <p>Jestem studentem informatyki na pierwszym roku. Na codzień zajmuję się grafiką, nauką i jeszcze raz grafiką. W wolnych chwilach streamuję na Twitch.tv moje zmagania w grach. </p>
+                    <p>Mam na imię Marek i studentem informatyki na pierwszym roku. Na co dzień zajmuję się grafiką, nauką i jeszcze raz grafiką. Zainteresowanie komputerem towarzyszy mi od dzieciństwa, ale pasja tworzenia przy jego pomocy od technikum.
+                        Uczęszczałem do technikum o profilu cyfrowych procesów graficznych, a następnie dostałem się na studia informatyczne o profilu grafiki komputerowej. Moim celem jest robienie grafik, z których nie tylko ja będę zadowolony, ale przede
+                        wszystkim moi zleceniodawcy. W wolnych chwilach streamuję moje zmagania w grach na <a href="https://www.twitch.tv/mvre" class="">Twitchu.</a></p>
                 </div>
             </div>
         </div>
@@ -117,8 +119,8 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Moje umiejętności i doświadczenie</div>
-                    <p>Jak już napomniałem wyżej - jestem studentem informatyki. Na codzień mam doczynienia z takimi językami jak HTML, CSS czy JavaScript. Ponad to potrafię posługiwać się programami firmy Adobe takimi jak: Photoshop, Illustrator, InDesign,
-                        PremierePro, AfterEffects oraz Audition.</p>
+                    <p>Jak już napomniałem wyżej - jestem studentem informatyki. Na codzień mam doczynienia z takimi językami jak: HTML, CSS czy JavaScript. Ponad to potrafię posługiwać się programami firmy Adobe takimi jak: Photoshop, Illustrator, InDesign,
+                        PremierePro, AfterEffects oraz Audition. Znam również Gita i GitHuba.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -141,13 +143,6 @@
                             <span>50%</span>
                         </div>
                         <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Markdown</span>
-                            <span>100%</span>
-                        </div>
-                        <div class="line md"></div>
                     </div>
                 </div>
             </div>
@@ -172,21 +167,21 @@
                     <div class="box">
                         <i class="fab fa-twitch"></i>
                         <div class="text">Twitch</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, vero. Officiis recusandae, provident blanditiis repudiandae eligendi delectus consequuntur!</p>
+                        <p>To tutaj ukazuję swoje mniej profesjonalne odbicie i daję się ponieść emocjom towarzyszącym mi w grach.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fab fa-facebook-square"></i>
                         <div class="text">Facebook</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, vero. Officiis recusandae, provident blanditiis repudiandae eligendi delectus consequuntur!</p>
+                        <p>Moja strona na facebooku, na którą wrzucam projekty, nad którymi pracuję i z których jestem dumny.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fab fa-instagram"></i>
                         <div class="text">Instagram</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, vero. Officiis recusandae, provident blanditiis repudiandae eligendi delectus consequuntur!</p>
+                        <p>Służy mi do tego samego co Facebook, aczkolwiek można tam również znaleźć moje amatorskie fotografie.</p>
                     </div>
                 </div>
             </div>
