--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                 <div class="column right">
                     <div class="text">Jestem MVRE i jestem <span>Designerem</span></div>
                     <p>Mam na imię Marek i studentem informatyki na pierwszym roku. Na co dzień zajmuję się grafiką, nauką i jeszcze raz grafiką. Zainteresowanie komputerem towarzyszy mi od dzieciństwa, ale pasja tworzenia przy jego pomocy od technikum.
-                        Uczęszczałem do technikum o profilu cyfrowych procesów graficznych, a następnie dostałem się na studia informatyczne o profilu grafika komputerowa. Moim celem jest robienie grafik, z których nie tylko ja będę zadowolony, ale przede
-                        wszystkim moi klienci. W wolnych chwilach streamuję moje zmagania w grach na <a href="https://www.twitch.tv/mvre" class="">Twitchu.</a></p>
+                        Uczęszczałem do technikum o profilu cyfrowych procesów graficznych, a następnie dostałem się na studia informatyczne o profilu grafika komputerowa. Do każdego projektu podchodzę indywidualnie, dbam o najmniejszy detal w mojej pracy
+                        oraz cenie sobie prostotę w projektowaniu. Moim celem jest robienie grafik, z których nie tylko ja będę zadowolony, ale przede wszystkim moi klienci. W wolnych chwilach streamuję moje zmagania w grach na <a href="https://www.twitch.tv/mvre"
+                            class="">Twitchu.</a></p>
                 </div>
             </div>
         </div>
