gallery photos + index/css edit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MVRE Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://kit.fontawesome.com/771d071eb9.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 </head>
@@ -18,7 +18,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo" data-text="Text Glitch"><a href="#">MVRE<span>|Design</span></a></div>
+            <div class="logo" data-text="Text Glitch"><a href="#">MVRE <span>Design</span></a></div>
             <ul class="menu">
                 <li>
                     <a href="#home">Start</a>
@@ -98,7 +98,7 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Strony internetowe</div>
-                        <p>Stworzę dla Ciebie responsywną stronę internetową przy użyciu języków: HTML, CSS oraz JS.</p>
+                        <p>Stworzę dla Ciebie responsywną stronę internetową przy użyciu języków: HTML, CSS oraz JS - nie zajmuję się tzw. backendem.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -127,30 +127,23 @@
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
-                            <span>100%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>75%</span>
+                            <span>50%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JQuery</span>
                             <span>25%</span>
                         </div>
-                        <div class="line jq"></div>
+                        <div class="line js"></div>
                     </div>
                 </div>
             </div>
@@ -177,7 +170,7 @@
                     <div class="itemBox graphic"><img src="/images/5.jpg"></div>
                     <div class="itemBox website"><img src="/images/6.jpg"></div>
                     <div class="itemBox logo"><img src="/images/7.jpg"></div>
-                    <div class="itemBox graphic"><img src="/images/8.png"></div>
+                    <div class="itemBox graphic"><img src="/images/8.jpg"></div>
                     <div class="itemBox website"><img src="/images/9.jpg"></div>
                     <div class="itemBox logo"><img src="/images/10.jpg"></div>
                     <div class="itemBox graphic"><img src="/images/11.jpg"></div>
@@ -198,7 +191,7 @@
                         <div class="box">
                             <i class="fab fa-twitch"></i>
                             <div class="text">Twitch</div>
-                            <p>To tutaj ukazuję swoje mniej profesjonalne odbicie i daję się ponieść emocjom towarzyszącym mi w grach.</p>
+                            <p>Tutaj ukazuję swoje mniej profesjonalne oblicze i daję się ponieść emocjom towarzyszącym mi w grach.</p>
                         </div>
                     </a>
                 </div>
@@ -207,7 +200,7 @@
                         <div class="box">
                             <i class="fab fa-facebook-square"></i>
                             <div class="text">Facebook</div>
-                            <p>Moja strona na facebooku, na którą wrzucam projekty, nad którymi pracuję i z których jestem dumny.</p>
+                            <p>Moja strona na facebooku, na którą wrzucam projekty, nad którymi pracowałem i jestem z nich zadowolony. </p>
                         </div>
                     </a>
                 </div>
@@ -242,7 +235,7 @@
                         <i class="fab fa-discord"></i>
                         <div class="info">
                             <div class="head">Discord</div>
-                            <div class="sub-title">MVRE#0027</div>
+                            <div class="sub-title">MVRE#0247</div>
                         </div>
                     </div>
                     <div class="row">
